--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
-			      <a href="https://restigouchedojo.com/registration.html">WINTER Judo Registration</a>
+			      <a href="https://restigouchedojo.com/registration.html">WINTER 2025 Judo Registration</a>
 		      		<br><a href="https://restigouchedojo.com/fallprevention.html">Fall prevention and safe 						landing</a>
 		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense 2.0</a>
 		      </p>
