--- a/registration.html
+++ b/registration.html
@@ -67,7 +67,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2025 season</h2>
-                      <p class="people__desc"> Winter: $195.81
+                      <p class="people__desc"> Winter block: $195.81
 			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
 			<br> <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
