--- a/tinytotsstoryline.html
+++ b/tinytotsstoryline.html
@@ -20,7 +20,7 @@
   <div class="container">
     <section class="section">
       <h2 class="section-title">Level 1: The Lion’s Courage and Respect</h2>
-      <img src="https://example.com/lion.jpg" alt="Lion" class="animal-image">
+      <img src="Photos/lion.png" alt="Lion" class="animal-image">
       <p>Once upon a time, there was a big, brave lion. The lion wanted to learn something new, so it went to a special place where all the animals played and learned together on a soft mat. The lion felt a little scared at first, but it was very brave and took its first step onto the mat. This showed courage!</p>
     </section>
 
