--- a/tinytotsstoryline.html
+++ b/tinytotsstoryline.html
@@ -26,19 +26,19 @@
 
     <section class="section">
       <h2 class="section-title">Level 2: The Octopus’s Focus and Self-Control</h2>
-      <img src="https://example.com/octopus.jpg" alt="Octopus" class="animal-image">
+      <img src="Photos/octopus.png" alt="Octopus" class="animal-image">
       <p>In the deep, blue ocean, there lived an octopus with eight arms. The octopus was very good at using all its arms at the same time! It could do many things at once because it had great self-control—that means it could stay calm and focus.</p>
     </section>
 
     <section class="section">
       <h2 class="section-title">Level 3: The Turtle’s Friendship and Perseverance</h2>
-      <img src="https://example.com/turtle.jpg" alt="Turtle" class="animal-image">
+      <img src="Photos/turtle.png" alt="Turtle" class="animal-image">
       <p>In a green meadow, there was a little turtle who wanted to climb a hill. The hill was very tall, but the turtle didn’t stop. It kept going, step by step, very slowly. This is called perseverance—it means you don’t give up, even when things are hard!</p>
     </section>
 
     <section class="section">
       <h2 class="section-title">Level 4: The Eagle’s Confidence, Honour, and Modesty</h2>
-      <img src="https://example.com/eagle.jpg" alt="Eagle" class="animal-image">
+      <img src="Photos/eagle.png" alt="Eagle" class="animal-image">
       <p>High in the sky, there was an eagle with big, strong wings. The eagle loved to fly very high and see everything below. It felt very confident because it practiced flying every day. The eagle was proud of how well it could fly, but it never bragged. This is called modesty—it means you don’t need to show off, even when you’re really good at something.</p>
     </section>
 
