--- a/tinytotsstoryline.html
+++ b/tinytotsstoryline.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Tiny Tots Storyline</h1>
     <h4>Follow the animal friends as they learn Judo values and grow together!</h4>
-    <a href="#" class="cta-btn">Back to Main Website</a>
+    <a href="index.html" class="cta-btn">Back to Main Website</a>
     <select id="language-selection">
       <option value="en">English</option>
       <option value="fr">Français</option>
