--- a/tinytotsstoryline.html
+++ b/tinytotsstoryline.html
@@ -21,30 +21,49 @@
     <section class="section">
       <h2 class="section-title">Level 1: The Lion’s Courage and Respect</h2>
       <img src="Photos/lion.png" alt="Lion" class="animal-image">
-      <p>Once upon a time, there was a big, brave lion. The lion wanted to learn something new, so it went to a special place where all the animals played and learned together on a soft mat. The lion felt a little scared at first, but it was very brave and took its first step onto the mat. This showed courage!</p>
+      <p>Once upon a time, there was a strong, brave lion who loved to explore. One day, the lion found a special place where animals came to learn and play together on a soft, safe mat. The lion was excited, but also a little nervous about joining the others. The lion took a deep breath and stepped onto the mat, showing great courage!</p>
+
+<p>While playing, the lion learned that being brave wasn’t just about trying new things—it was also about being kind and listening to others. The lion showed respect by waiting for its turn, listening carefully to the teacher, and being gentle with the other animals. Everyone was happy when they played together with respect.</p>
+
+<p>At the end of the day, the lion noticed an octopus nearby and thought, "Next, I will learn how to stay calm and control my actions like the wise octopus."</p>
     </section>
 
     <section class="section">
       <h2 class="section-title">Level 2: The Octopus’s Focus and Self-Control</h2>
       <img src="Photos/octopus.png" alt="Octopus" class="animal-image">
-      <p>In the deep, blue ocean, there lived an octopus with eight arms. The octopus was very good at using all its arms at the same time! It could do many things at once because it had great self-control—that means it could stay calm and focus.</p>
+      <p>In the blue ocean, there lived a clever octopus with many arms. The octopus could use all eight arms at once because it had great self-control—that means it knew how to stay calm, even when things were tricky.</p>
+
+<p>One day, the octopus decided to join the lion and other animals on the mat. The octopus showed everyone how to keep calm and use their bodies carefully. It also showed them how to be polite, always saying "please" and "thank you" when playing together. This is called courtesy—being kind to others.</p>
+
+<p>When playtime was over, the octopus said, “Now, it’s time to meet the turtle, who will teach us how to be good friends and never give up.”
+</p>
     </section>
 
     <section class="section">
       <h2 class="section-title">Level 3: The Turtle’s Friendship and Perseverance</h2>
       <img src="Photos/turtle.png" alt="Turtle" class="animal-image">
-      <p>In a green meadow, there was a little turtle who wanted to climb a hill. The hill was very tall, but the turtle didn’t stop. It kept going, step by step, very slowly. This is called perseverance—it means you don’t give up, even when things are hard!</p>
+      <p>In a grassy meadow, there was a small turtle who wanted to climb a big hill. The hill seemed so tall, but the turtle didn’t give up. Step by step, it kept going. This is called perseverance—it means you keep trying, even when something is hard.</p>
+
+<p>As the turtle climbed, it made lots of friends along the way. The turtle taught everyone that being a good friend means helping each other, cheering each other on, and sharing smiles. Slowly but surely, the turtle reached the top of the hill, thanks to the help of its friends.</p>
+
+<p>Looking up, the turtle saw an eagle flying high. "Next," the turtle said, "we will learn how to be proud and confident, just like the eagle."</p>
     </section>
 
     <section class="section">
       <h2 class="section-title">Level 4: The Eagle’s Confidence, Honour, and Modesty</h2>
       <img src="Photos/eagle.png" alt="Eagle" class="animal-image">
-      <p>High in the sky, there was an eagle with big, strong wings. The eagle loved to fly very high and see everything below. It felt very confident because it practiced flying every day. The eagle was proud of how well it could fly, but it never bragged. This is called modesty—it means you don’t need to show off, even when you’re really good at something.</p>
+      <p>High in the sky soared a proud eagle with big, strong wings. The eagle loved flying high, feeling confident because it practiced every day. The eagle was proud of how well it could fly, but it always stayed humble. This is called modesty—even when you’re very good at something, you stay kind and don’t make others feel bad.</p>
+
+<p>One day, the eagle swooped down to the mat where the lion, octopus, and turtle were playing. The eagle said, “I will teach you to be proud of yourselves and to always do your best. This is called honour. But remember, being kind and humble is just as important as being great at something.”</p>
+
+<p>The animals listened closely and felt proud, but also kind, just like the eagle.</p>
     </section>
 
 <section class="section">
   <h2 class="section-title">The End</h2>
-  <p class="end-message">Each bracelet is a special reminder of how we can be brave, kind, and strong as we learn and grow together!</p>
+  <p class="end-message">And so, with courage from the lion, calmness from the octopus, friendship from the turtle, and pride from the eagle, all the animals became good friends who learned and grew together on the mat.
+
+Each level is a special reminder of how we can be brave, kind, and strong as we practice judo and play together!</p>
 </section>
 
   </div>
