--- a/tinytotsstoryline.html
+++ b/tinytotsstoryline.html
@@ -63,7 +63,7 @@
   <h2 class="section-title">The End</h2>
   <p class="end-message">And so, with courage from the lion, calmness from the octopus, friendship from the turtle, and pride from the eagle, all the animals became good friends who learned and grew together on the mat.
 
-Each level is a special reminder of how we can be brave, kind, and strong as we practice judo and play together!</p>
+<br>Each level is a special reminder of how we can be brave, kind, and strong as we practice judo and play together!</p>
 </section>
 
   </div>
