--- a/bjjinfo.html
+++ b/bjjinfo.html
@@ -62,8 +62,7 @@
             <!-- BJJ Belt System Section -->
             <section class="belt-system-section">
                 <div class="container">
-                    <h1>Brazilian Jiu-Jitsu Belt System</h1>
-                    <h2>Rodrigo Resende BJJ Team</h2>
+                    <h2>Brazilian Jiu-Jitsu Belt System <br>Rodrigo Resende BJJ Team</h2>
                     <div class="belt-system">
                         <div class="belt white"><span>White Belt</span></div>
                         <div class="belt green"><span>Green Belt</span></div>
