--- a/bjjinfo.html
+++ b/bjjinfo.html
@@ -62,7 +62,8 @@
             <!-- BJJ Belt System Section -->
             <section class="belt-system-section">
                 <div class="container">
-                    <h1>Brazilian Jiu-Jitsu Belt System <br>Rodrigo Resende BJJ Team</h1>
+                    <h2>Brazilian Jiu-Jitsu Belt System</h2>
+                    <h1>(Rodrigo Resende BJJ Team)</h1>
                     <div class="belt-system">
                         <div class="belt white"><span>White Belt</span></div>
                         <div class="belt green"><span>Green Belt</span></div>
