--- a/judovalues.html
+++ b/judovalues.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Judo Moral Code: Values and How They Can Be Observed on the Mats</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="judovalues.css"> <!-- Link to the CSS file -->
 </head>
 
 <body>
