--- a/judovalues.html
+++ b/judovalues.html
@@ -12,42 +12,42 @@
     <h1>The Judo Moral Code: Values and How They Can Be Observed on the Mats</h1>
 
     <div class="value">
-        <h2>1. Courtesy (礼 – Rei)</h2>
+        <h2>1. Courtesy</h2>
         <p><strong>Courtesy</strong> is fundamental to creating a respectful environment in the dojo. On the mats, it is observed through the practice of bowing before and after stepping onto the tatami, as well as to training partners before and after sparring. Judoka show courtesy by keeping a clean gi, maintaining cleanliness of the dojo, arriving on time, and using polite titles like "Sensei." By practicing courtesy, judoka ensure a positive and respectful atmosphere where everyone feels safe and valued.</p>
     </div>
 
     <div class="value">
-        <h2>2. Courage (勇 – Yu)</h2>
+        <h2>2. Courage</h2>
         <p><strong>Courage</strong> in judo means stepping onto the mat despite fear or uncertainty, whether it's facing a stronger opponent or trying a new technique in competition. Judoka demonstrate courage by constantly pushing their limits, even after experiencing failures or injuries. Courage is also shown when a judoka perseveres through tough training, focusing on improvement and embracing challenges as opportunities for growth. In practice, it can be as simple as taking on a higher belt or returning to the mat after a setback.</p>
     </div>
 
     <div class="value">
-        <h2>3. Honesty (誠 – Makoto)</h2>
+        <h2>3. Honesty</h2>
         <p><strong>Honesty</strong> on the judo mat is about being truthful with yourself and others. This value is reflected in how judoka assess their performance—acknowledging their strengths and weaknesses, accepting responsibility for mistakes, and avoiding making excuses for losses. It also means giving your best effort during training and competition, and being humble in victory and gracious in defeat. Honesty builds resilience and fosters a constructive attitude toward self-improvement.</p>
     </div>
 
     <div class="value">
-        <h2>4. Honor (誉 – Yo)</h2>
+        <h2>4. Honor</h2>
         <p><strong>Honor</strong> in judo is about living up to the principles of judo both on and off the mats. A judoka shows honor by following the rules, respecting opponents, and giving their best effort, regardless of the outcome. Honor is upheld in competition through fair play and gracious behavior, whether in victory or defeat. Outside of matches, honor involves maintaining a strong moral compass, adhering to the spirit of judo, and contributing to the growth and well-being of the judo community.</p>
     </div>
 
     <div class="value">
-        <h2>5. Modesty (謙 – Ken)</h2>
+        <h2>5. Modesty</h2>
         <p><strong>Modesty</strong> is observed when judoka remain humble in their achievements and open to learning, regardless of their rank or experience. On the mats, a modest judoka accepts feedback, acknowledges that there is always room for improvement, and respects training partners of all skill levels. In competition, modesty is demonstrated by winning with humility and losing with grace. Modesty helps create a cooperative and supportive training environment where everyone can grow together.</p>
     </div>
 
     <div class="value">
-        <h2>6. Respect (敬 – Kei)</h2>
+        <h2>6. Respect</h2>
         <p><strong>Respect</strong> in judo is shown through the way judoka interact with their sensei, training partners, and the dojo itself. It involves listening attentively to instructions, bowing sincerely, and treating everyone—regardless of rank—with consideration. Respect also means taking care of the dojo by keeping it clean and showing appreciation for the space and people that help foster one’s development. Outside the dojo, judoka extend this respect to others in their daily lives, demonstrating consideration and empathy.</p>
     </div>
 
     <div class="value">
-        <h2>7. Self-Control (制 – Sei)</h2>
+        <h2>7. Self-Control</h2>
         <p><strong>Self-control</strong> is essential for safety and effective practice in judo. On the mats, it is observed through managing emotions such as frustration, anger, or overconfidence, especially during intense sparring or competition. Judoka show self-control by maintaining focus during practice, executing techniques carefully to avoid injury, and making thoughtful decisions in stressful situations. The discipline learned in judo can be applied to managing personal behavior and emotions off the mats as well.</p>
     </div>
 
     <div class="value">
-        <h2>8. Friendship (和 – Wa)</h2>
+        <h2>8. Friendship</h2>
         <p><strong>Friendship</strong> is fostered through mutual support and encouragement among judoka. On the mats, friendship is seen when experienced practitioners help beginners improve their skills or when training partners motivate each other through tough sessions. Friendship also extends beyond the dojo—whether in celebrating victories, supporting each other through setbacks, or building camaraderie during tournaments. The sense of community that develops through friendship creates a strong, positive, and inclusive judo culture.</p>
     </div>
 
