--- a/media.html
+++ b/media.html
@@ -91,6 +91,16 @@
                 </div>
 
 		    
+		<div class="gallery-item">
+                    <img class="gallery-image" src="Photos/seminar2024.jpg" alt="Group picture">
+                </div>
+
+
+		<div class="gallery-item">
+                    <img class="gallery-image" src="Photos/bluepromo.jpg" alt="Group picture">
+                </div>
+
+		    
 
         <!-- 
                 <div class="gallery-item">
