--- a/media.html
+++ b/media.html
@@ -92,12 +92,12 @@
 
 		    
 		<div class="gallery-item">
-                    <img class="gallery-image" src="Photos/seminar2024.jpg" alt="Group picture">
+                    <img class="gallery-image" src="Photos/seminar2024.jpg" alt="Seminar with Hal 2024">
                 </div>
 
 
 		<div class="gallery-item">
-                    <img class="gallery-image" src="Photos/bluepromo.jpg" alt="Group picture">
+                    <img class="gallery-image" src="Photos/bluepromo.jpg" alt="Blue belt promotion">
                 </div>
 
 		    
