--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -28,7 +28,7 @@
     <section class="instructor">
       <h2 id="instructor-title">Meet Your Instructor: Maxime Raymond</h2>
       <p id="instructor-description">
-        Maxime Raymond, with over 15 years of experience on the provincial team of Judo New Brunswick and international competition experience, will lead the session. A black belt in Judo and purple belt in Brazilian Jiu-Jitsu, Maxime has trained with Olympic athletes and provided training to law enforcement officers. His expertise in both disciplines ensures a class tailored to your needs as a Law Enforcement professional.
+        Maxime Raymond, with over 15 years of experience on the provincial team of Judo New Brunswick and international competition experience, will lead the session. A black belt in Judo and brown belt in Brazilian Jiu-Jitsu, Maxime has trained with Olympic athletes and provided training to law enforcement officers. His expertise in both disciplines ensures a class tailored to your needs as a Law Enforcement professional.
       </p>
     </section>
 
