--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -43,7 +43,7 @@
       <h2 id="guide-title">Key Components of the Trial Class</h2>
 
       <div class="icon-section">
-        <img src="bjj_icon.png" alt="BJJ Icon" class="icon-img">
+        <img src="Photos/bjjicon.png" alt="BJJ Icon" class="icon-img">
         <h3 id="bjj-law-enforcement">BJJ for Law Enforcement</h3>
         <p id="bjj-law-enforcement-text">
           Enhance your ability to handle critical situations safely, drawing on principles that can be translated effectively to various scenarios, including law enforcement situations. Gain skills that will give you confidence and control on the job.
