--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="icon-section">
-        <img src="leverage_icon.png" alt="Leverage Icon" class="icon-img">
+        <img src="Photos/leverageicon.png" alt="Leverage Icon" class="icon-img">
         <h3 id="leverage-technique">Effective Use of Leverage and Technique</h3>
         <p id="leverage-technique-text">
           BJJ's focus on leverage and technique enables you to subdue and control opponents with minimal effort. This maximizes effectiveness while reducing the risk of injury. Our trial class seamlessly integrates these principles into valuable, job-related training.
