--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="icon-section">
-        <img src="preparedness_icon.png" alt="Preparedness Icon" class="icon-img">
+        <img src="Photos/preparedicon.png" alt="Preparedness Icon" class="icon-img">
         <h3 id="physical-mental-preparedness">Enhanced Physical and Mental Preparedness</h3>
         <p id="physical-mental-preparedness-text">
           Participate in a mentally and physically challenging training program, developing discipline, focus, and resilience. These are essential attributes for Law Enforcement professionals. Our supportive environment will help you build the mental and physical strength needed to excel in demanding situations.
