--- a/spookyrolls.html
+++ b/spookyrolls.html
@@ -15,8 +15,8 @@
     <section class="event-info">
         <h2>Event Details</h2>
         <div class="info-box">
-            <p><strong>Date:</strong> October 31st, 2024</p>
-            <p><strong>Time:</strong> 6:00 PM - 8:00 PM</p>
+            <p><strong>Date:</strong> October 30th, 2024</p>
+            <p><strong>Time:</strong> 6:00 PM - 7:00 PM</p>
             <p><strong>Location:</strong> Restigouche Dojo</p>
             <p><strong>Costumes:</strong> Yes! Get creative and dress up, but remember no makeup or zippers. Wear a gi, but no-gi is ideal due to costume flexibility.</p>
             <p><strong>Special Surprise:</strong> The night will include a unique twist during rolling. Expect something unexpected to add an extra challenge to your training!</p>
