Update and rename KHK.html to khk.html

--- a/khk.html
+++ b/khk.html
@@ -16,7 +16,7 @@
 
     <main>
         <section id="about-event" class="card">
-          <img src="path/to/your/image.jpg" alt="Super Seminar Image" class="seminar-image">
+          <img src="Photos/khk.png" alt="Super Seminar Image" class="seminar-image">
             <h2>About the Super Seminar</h2>
             <p>Join us for the Kids Helping Kids Super Seminar 3.0, an event designed to raise funds for Little Warriors, a charity dedicated to preventing, raising awareness, and treating child sexual abuse. This year’s event promises exciting sessions and the opportunity to make a difference.</p>
             <ul>
