--- a/khk.html
+++ b/khk.html
@@ -45,7 +45,7 @@
             <h2>Event Details</h2>
             <ul>
                 <li><strong>Date:</strong> April 2024</li>
-                <li><strong>Location:</strong> Restigouche Dojo, Alberta</li>
+                <li><strong>Location:</strong> Restigouche Dojo</li>
                 <li><strong>Registration Fee:</strong> $20.00 (includes one prize draw entry)</li>
                 <li><strong>Eligibility for PS5 Prize Draw:</strong> Raise $200+ or complete Little Warriors Prevent It! workshop</li>
             </ul>
