--- a/seminar2025.html
+++ b/seminar2025.html
@@ -3,58 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BJJ Seminar with Shawn McManus</title>
-    <link rel="stylesheet" href="seminar2025.css">
+    <title>Shawn McManus BJJ Seminar</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Exclusive BJJ Seminar with Shawn McManus</h1>
-        <p class="subtitle">Level up your game with insights from a submission specialist!</p>
-    </header>
 
-    <main>
-        <section class="event-info">
-            <h2>Event Details</h2>
-            <p><strong>Date:</strong> To Be Determined</p>
-            <p><strong>Time:</strong> To Be Determined</p>
-            <p><strong>Location:</strong> Restigouche Dojo</p>
-            <p>Prepare to dive into the world of Brazilian Jiu-Jitsu with one of the best in the game! Shawn McManus, known for his relentless pursuit of submissions and elite-level instruction, is coming to share his techniques and strategies. Whether you’re a beginner or advanced practitioner, this seminar promises insights that can transform your BJJ journey!</p>
-        </section>
+<header>
+    <h1>Exclusive BJJ Seminar with Shawn McManus</h1>
+    <p class="subtitle">Transform your skills with an elite instructor!</p>
+</header>
 
-        <section class="bio">
-            <h2>About Shawn McManus</h2>
-            <p>Shawn McManus is not just a black belt – he’s a proven champion and dedicated instructor with an undeniable track record. As the 2020 Rogue Grand Prix Champion (open weight, no time limit, submission only) and the 2016 Mind Games Lightweight Champion, Shawn has established himself as a force on the mat. Known for his skill in dominating with submissions, he boasts an unbeaten record on Smoothcomp with <strong>31 wins by submission</strong> – a feat few can claim!</p>
+<main>
+    <section class="intro">
+        <h2>About the Seminar</h2>
+        <p>We are thrilled to welcome Shawn McManus, known for his relentless pursuit of submissions and elite-level instruction, to Restigouche Dojo! With his unmatched expertise in both Judo and Brazilian Jiu-Jitsu, Shawn is coming to share the techniques, insights, and strategies that have propelled him to the top. Whether you’re a beginner or an advanced practitioner, this seminar promises transformative insights that can take your BJJ journey to the next level!</p>
+    </section>
 
-            <div class="expertise">
-                <h3>Shawn's BJJ Achievements</h3>
-                <ul>
-                    <li>Black Belt in Brazilian Jiu-Jitsu</li>
-                    <li>2020 Rogue Grand Prix Champion (open weight, no time limit, submission only)</li>
-                    <li>2016 Mind Games Lightweight Champion</li>
-                    <li>Certified Referee for Military Combative Grappling Championships</li>
-                    <li>Instructor at Gagetown Submission Grappling</li>
-                    <li>31 Wins on Smoothcomp – All by Submission!</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="what-to-expect">
-            <h2>What to Expect</h2>
-            <p>This isn’t just another seminar – it’s an opportunity to learn from a submission expert with years of experience in competitive BJJ. Shawn will be breaking down techniques that have made him a champion, including strategies for dominating open-weight matches and handling high-pressure, no-time-limit scenarios.</p>
-            <p>Expect deep dives into:</p>
+    <section class="credentials">
+        <h2>Shawn McManus' Credentials</h2>
+        <div class="bio">
+            <h3>Judo</h3>
             <ul>
-                <li>Efficient submission setups and finishing techniques</li>
-                <li>Positional control and transitions for every body type</li>
-                <li>Secrets to a resilient guard and unstoppable attacks</li>
-                <li>Mindset and strategies to apply under pressure</li>
+                <li>5th degree Judo black belt</li>
+                <li>Co-Chair of the provincial grading board</li>
+                <li>2023 Canada Games male coach</li>
+                <li>Coach of over 15 national medalists</li>
+                <li>Multi-time Provincial, Atlantic, and Eastern Canadian champion</li>
             </ul>
-            <p>Get ready for a challenging, hands-on experience where Shawn will not only show you his techniques but also help you refine and adapt them to your style.</p>
-            <p><strong>This is your chance to train with a champion and take your BJJ to the next level. Don’t miss it!</strong></p>
-        </section>
-    </main>
+        </div>
+        <div class="bio">
+            <h3>BJJ</h3>
+            <ul>
+                <li>Black belt in Brazilian Jiu-Jitsu</li>
+                <li>Instructor at Gagetown Submission Grappling</li>
+                <li>2020 Rogue Grand Prix Champion (open weight, no time limit, submission only)</li>
+                <li>2016 Mind Games lightweight champion</li>
+                <li>Certified Referee for Military Combative Grappling Championships</li>
+            </ul>
+        </div>
+    </section>
 
-    <footer>
-        <p>&copy; 2024 Restigouche Dojo. All rights reserved.</p>
-    </footer>
+    <section class="records">
+        <h2>Competition Record</h2>
+        <div class="record">
+            <h3>BJJ Record</h3>
+            <p>56 wins (55 by submission), 12 losses (4 by submission)</p>
+        </div>
+        <div class="record">
+            <h3>Judo Record Since 2006</h3>
+            <p>169 wins (161 by ippon, 99 of those by submission), 42 losses (32 by ippon, none by submission)</p>
+        </div>
+    </section>
+
+    <section class="what-to-expect">
+        <h2>What to Expect</h2>
+        <p>Get ready for a seminar packed with high-level techniques and insights! Shawn will cover:</p>
+        <ul>
+            <li>Advanced submission techniques and strategic setups</li>
+            <li>Integrating Judo and BJJ for a powerful stand-up game</li>
+            <li>Exclusive coaching tips from an elite competitor and instructor</li>
+            <li>Hands-on drills in submission setups and defenses to elevate your game</li>
+        </ul>
+        <p>Don’t miss out on this rare opportunity to learn from a true master and transform your skill set!</p>
+    </section>
+
+    <section class="schedule">
+        <h2>Seminar Details</h2>
+        <p>Date and Time: <em>To be announced</em></p>
+        <p>Location: Restigouche Dojo</p>
+    </section>
+
+    <section class="action-call">
+        <h2>Reserve Your Spot!</h2>
+        <p>Spaces are limited. Be part of this unforgettable experience and take your BJJ journey to new heights. Secure your spot now!</p>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2024 Restigouche Dojo. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
