--- a/seminar2025.html
+++ b/seminar2025.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shawn McManus BJJ Seminar</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="seminar2025.css">
 </head>
 <body>
 
