--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5><a href="registration.html">JUDO-WINTER 2025 REGISTRATION NOW OPEN</a></h5>
+                <h5><a href="registration.html">JUDO-WINTER 2025 REGISTRATION NOW FULL</a></h5>
               </div>
             <!--BOX END-->
 		
