--- a/youthbjj.html
+++ b/youthbjj.html
@@ -20,29 +20,35 @@
         <p>Our classes are designed to build confidence, discipline, and technical mastery in the exciting world of Brazilian Jiu-Jitsu. Perfect for youth ages 7-13!</p>
     </section>
 
-    <!-- Youth BJJ Program Section -->
-    <section class="features">
-        <h2>NEW! Youth Brazilian Jiu-Jitsu Program</h2>
-        <div class="feature-item">
-            <img src="bjj-youth-icon.png" alt="Youth BJJ Icon">
-            <h3>For Ages 7-13</h3>
-            <p>
-                We are thrilled to announce our Youth BJJ Program! Starting with one-hour classes every Monday from 5-6 PM, this program introduces children aged 7-13 to the fundamentals of Brazilian Jiu-Jitsu in a safe, supportive, and fun environment.
-            </p>
-            <h3>Instructor Spotlight: Mike Miller</h3>
-            <ul>
-                <li>Mike Miller is a dedicated Brazilian Jiu-Jitsu blue belt instructor with a wealth of experience in self-defense and martial arts.</li>
-                <li>Over 13 years as an instructor in use-of-force and officer safety, specializing in self-defense for the Department of Public Safety.</li>
-                <li>Certified Police Jiu-Jitsu instructor through C4C.</li>
-                <li>Former professional Highland Games athlete with multi-sport experience, including hockey, volleyball, and baseball.</li>
-                <li>Successfully completed the Restigouche Dojo Leadership Course.</li>
-            </ul>
-            <h3>Curriculum</h3>
-            <p>
-                Classes are based on the proven curriculum of Rodrigo Resende, a 5th-degree black belt in Brazilian Jiu-Jitsu, and are also under the direct instruction of Maxime Raymond, a BJJ brown belt. The curriculum focuses on foundational techniques, positional awareness, and confidence-building exercises. Students will develop skills that enhance their focus, fitness, and self-defense capabilities.
-            </p>
-        </div>
-    </section>
+<!-- Youth BJJ Program Section -->
+<section class="features">
+    <h2>NEW! Youth Brazilian Jiu-Jitsu Program</h2>
+    <div class="feature-item">
+        <h3>For Ages 7-13</h3>
+        <p>
+            We are thrilled to announce our Youth BJJ Program! Starting with one-hour classes every Monday from 5-6 PM, this program introduces children aged 7-13 to the fundamentals of Brazilian Jiu-Jitsu in a safe, supportive, and fun environment.
+        </p>
+    </div>
+
+    <div class="feature-item">
+        <h3>Instructor Spotlight: Mike Miller</h3>
+        <ul>
+            <li>Mike Miller is a dedicated Brazilian Jiu-Jitsu blue belt instructor with a wealth of experience in self-defense and martial arts.</li>
+            <li>Over 13 years specializing in self-defense for the Department of Public Safety.</li>
+            <li>Certified Police Jiu-Jitsu instructor through C4C.</li>
+            <li>Former professional Highland Games athlete with multi-sport experience, including hockey, volleyball, and baseball.</li>
+            <li>Successfully completed the Restigouche Dojo Leadership Course with success.</li>
+        </ul>
+    </div>
+
+    <div class="feature-item">
+        <h3>Curriculum</h3>
+        <p>
+            Classes are based on the proven curriculum of Rodrigo Resende, a 5th-degree black belt in Brazilian Jiu-Jitsu, and are also under the direct instruction of Maxime Raymond, a BJJ brown belt. The curriculum focuses on foundational techniques, positional awareness, and confidence-building exercises. Students will develop skills that enhance their focus, fitness, and self-defense capabilities.
+        </p>
+    </div>
+</section>
+
 
     <!-- Call to Action -->
     <section class="hero">
@@ -60,3 +66,4 @@
     </footer>
 </body>
 </html>
+
