--- a/youthbjj.html
+++ b/youthbjj.html
@@ -37,7 +37,7 @@
             <li>Over 13 years specializing in self-defense for the Department of Public Safety.</li>
             <li>Certified Police Jiu-Jitsu instructor through C4C.</li>
             <li>Former professional Highland Games athlete with multi-sport experience, including hockey, volleyball, and baseball.</li>
-            <li>Successfully completed the Restigouche Dojo Leadership Course with success.</li>
+            <li>Successfully completed the Restigouche Dojo Leadership Course.</li>
         </ul>
     </div>
 
