--- a/youthbjj.html
+++ b/youthbjj.html
@@ -56,7 +56,7 @@
         <p>
             Join our Youth Brazilian Jiu-Jitsu program today and become part of a supportive community dedicated to growth, learning, and excellence in martial arts.
         </p>
-        <a href="contact.html" class="cta-button">Contact Us to Enroll</a>
+        <a href="contactus.html" class="cta-button">Contact Us to Enroll</a>
     </section>
 
     <footer>
