--- a/youthbjj.html
+++ b/youthbjj.html
@@ -26,7 +26,7 @@
     <div class="feature-item">
         <h3>For Ages 7-13</h3>
         <p>
-            We are thrilled to announce our Youth BJJ Program! Starting with one-hour classes every Monday from 5-6 PM, this program introduces children aged 7-13 to the fundamentals of Brazilian Jiu-Jitsu in a safe, supportive, and fun environment.
+            We are thrilled to announce our Youth BJJ Program! Starting with one-hour No-Gi classes every Monday from 5-6 PM, this program introduces children aged 7-12 to the fundamentals of Brazilian Jiu-Jitsu in a safe, supportive, and fun environment.
         </p>
     </div>
 
