--- a/youthbjj.html
+++ b/youthbjj.html
@@ -10,19 +10,19 @@
 <body>
     <header>
         <div class="container">
-            <h1>Youth Brazilian Jiu-Jitsu at Restigouche Dojo</h1>
+            <h1>Youth Brazilian Jiu-Jitsu (No-Gi) at Restigouche Dojo</h1>
         </div>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-        <h2>Discover the Art of Brazilian Jiu-Jitsu</h2>
+        <h2>Discover the Art of No-Gi Brazilian Jiu-Jitsu</h2>
         <p>Our classes are designed to build confidence, discipline, and technical mastery in the exciting world of Brazilian Jiu-Jitsu. Perfect for youth ages 7-13!</p>
     </section>
 
 <!-- Youth BJJ Program Section -->
 <section class="features">
-    <h2>NEW! Youth Brazilian Jiu-Jitsu Program</h2>
+    <h2>NEW! Youth No-Gi Brazilian Jiu-Jitsu Program</h2>
     <div class="feature-item">
         <h3>For Ages 7-13</h3>
         <p>
@@ -54,7 +54,7 @@
     <section class="hero">
         <h2>Ready to Begin Your Journey?</h2>
         <p>
-            Join our Youth Brazilian Jiu-Jitsu program today and become part of a supportive community dedicated to growth, learning, and excellence in martial arts.
+            Join our No-Gi Youth Brazilian Jiu-Jitsu program today and become part of a supportive community dedicated to growth, learning, and excellence in martial arts.
         </p>
         <a href="contactus.html" class="cta-button">Contact Us to Enroll</a>
     </section>
