--- a/instructors.html
+++ b/instructors.html
@@ -53,7 +53,7 @@
 
             <!--MEET THE TEAM BANNER-->
 <div class="instructors-section">
-    <h2 class="instructors-title">Instructors</h2>
+    <h2 class="instructors-title">Meet Our Instructors</h2>
     <div class="instructor-card-container">
         <div class="instructor-card">
             <div class="instructor-card__image">
