--- a/instructors.html
+++ b/instructors.html
@@ -75,11 +75,11 @@
             </div>
             <div class="instructor-card">
                 <img src="instructor3.jpg" alt="Instructor 3">
-                <h3>Mike Miller</h3>
-                <p>Blue Belt in BJJ</p>
+                <h3>???</h3>
+                <p>??</p>
                 <p>Specialist in Brazilian Jiu-Jitsu, with a focus on submission techniques and self-defense.</p>
 
-                <a href="about-instructor3.html" class="learn-more">Learn More About Mike</a>
+                <a href="about-instructor3.html" class="learn-more">Learn More About ?</a>
                 <a href="results-instructor3.html" class="results-link">View Results</a>
             </div>
         </div>
