--- a/instructors.html
+++ b/instructors.html
@@ -56,25 +56,25 @@
         <h2 class="instructors-title">Meet Our Instructors</h2>
         <div class="instructors-list">
             <div class="instructor-card">
-                <img src="instructor1.jpg" alt="Instructor 1">
+                <img src="Photos/IMG-20240906-WA0002~2.jpg" alt="Maxime Raymond">
                 <h3>Maxime Raymond</h3>
                 <p>Black Belt in Judo & Brown Belt in BJJ</p>
                 <p>15+ years on the Judo New Brunswick provincial team and multiple international medals.</p>
-                <p><strong>NCCP Number:</strong> 12345678</p>
-                <a href="about-instructor1.html" class="learn-more">Learn More About Maxime</a>
-                <a href="results-instructor1.html" class="results-link">View Results</a>
+                <p><strong>NCCP Number:</strong> 1073218</p>
+                <a href="blog1.html" class="learn-more">Learn More About Maxime</a>
+                <a href="achievementsmax.html" class="results-link">View Results</a>
             </div>
             <div class="instructor-card">
-                <img src="instructor2.jpg" alt="Instructor 2">
+                <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Megan Raymond">
                 <h3>Megan Raymond</h3>
                 <p>Black Belt in Judo & Blue Belt in BJJ</p>
                 <p>Expert in Judo and martial arts, passionate about teaching and sharing knowledge.</p>
-                <p><strong>NCCP Number:</strong> 98765432</p>
-                <a href="about-instructor2.html" class="learn-more">Learn More About Megan</a>
-                <a href="results-instructor2.html" class="results-link">View Results</a>
+                <p><strong>NCCP Number:</strong> 6615715</p>
+                <a href="blog2.html" class="learn-more">Learn More About Megan</a>
+                <a href="achievementsmeg.html" class="results-link">View Results</a>
             </div>
             <div class="instructor-card">
-                <img src="instructor3.jpg" alt="Instructor 3">
+                <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Instructor 3">
                 <h3>???</h3>
                 <p>??</p>
                 <p>Specialist in Brazilian Jiu-Jitsu, with a focus on submission techniques and self-defense.</p>
