--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
               <h3>BJJ - Brazilian Jiu-Jitsu</h3>
               <p>Learn the art of Brazilian Jiu-Jitsu and its ground fighting techniques. <br> Program info:
 	      <ul>
-		      <li><a href="bjjinfo.html">Brazilian Jiu-Jitsu</a></li>
+		      <li><a href="bjjinfo.html">Adult Brazilian Jiu-Jitsu</a></li>
+		       <li><a href="youthbjj.html">Youth No-Gi Brazilian Jiu-Jitsu</a></li>
 	      </ul>
 	      </p>
             </div>
