--- a/instructors.html
+++ b/instructors.html
@@ -75,11 +75,11 @@
             </div>
             <div class="instructor-card">
                 <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Instructor 3">
-                <h3>???</h3>
-                <p>??</p>
+                <h3>Mike Miller</h3>
+                <p>Blue Belt in BJJ</p>
                 <p>Specialist in Brazilian Jiu-Jitsu, with a focus on submission techniques and self-defense.</p>
 
-                <a href="about-instructor3.html" class="learn-more">Learn More About ?</a>
+                <a href="blog3.html" class="learn-more">Learn More About Mike</a>
             </div>
         </div>
     </section>
