--- a/registration.html
+++ b/registration.html
@@ -165,7 +165,7 @@
 			  </p>
                   </div>
                   <div class="people__div people__div--name">
-                      <h2 class="people-name">BJJ</h2>
+                      <h2 class="people-name">Adult BJJ</h2>
                   </div>
               </div>          
       <!--
