--- a/instructors.html
+++ b/instructors.html
@@ -67,7 +67,7 @@
             <div class="instructor-card">
                 <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Megan Raymond">
                 <h3>Megan Raymond</h3>
-                <p>Black Belt in Judo & Blue Belt in BJJ</p>
+                <p>Black Belt in Judo</p>
                 <p>Expert in Judo and martial arts, passionate about teaching and sharing knowledge.</p>
                 <p><strong>NCCP Number:</strong> 6615715</p>
                 <a href="blog2.html" class="learn-more">Learn More About Megan</a>
