--- a/registration.html
+++ b/registration.html
@@ -168,21 +168,21 @@
                       <h2 class="people-name">Adult BJJ</h2>
                   </div>
               </div>          
-      <!--
+
               <div class="demo__div people">
                 <div class="people__div people__div--img">
-                    <img src="Photos/bjjnbfee.jpg" alt="" class="people__img">
+                    <img src="BLANK" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">Annual membership</h2>
-                    <p class="people__desc"> Fees: $21
-                        <a href="https://square.link/u/XXvy7Jbg" target="_blank">Pay now</a>
+                    <h2 class="people__name">Youth No-Gi BJJ</h2>
+                    <p class="people__desc"> Fees: $
+                        <a href="BLANK" target="_blank">Pay now</a>
                 </div>
                 <div class="people__div people__div--name">
-                    <h2 class="people-name">BJJNB</h2>
+                    <h2 class="people-name">Youth No-Gi BJJ</h2>
                 </div>
             </div>    
-		      -->  
+
 		  
               </div>               
           </div>
