--- a/schedule.html
+++ b/schedule.html
@@ -90,11 +90,17 @@
                     <td>Megan Raymond</td>
                 </tr>
                 <tr>
-                    <td>Monday</td>
+                    <td rowspan="2">Monday</td>
+                    <td>5:00 PM - 6:00 PM</td>
+                    <td>Youth No-Gi Brazilian Jiu Jitsu</td>
+                    <td>Mike Miller</td>
+                </tr>
+		<tr>
                     <td>6:00 PM - 7:00 PM</td>
-                    <td>Brazilian Jiu Jitsu</td>
+                    <td>Adult Brazilian Jiu Jitsu</td>
                     <td>Maxime Raymond</td>
                 </tr>
+		    
                 <tr>
                     <td rowspan="2">Wednesday</td>
                     <td>5:00 PM - 6:00 PM</td>
