--- a/schedule.html
+++ b/schedule.html
@@ -109,7 +109,7 @@
                 </tr>
                 <tr>
                     <td>6:00 PM - 7:00 PM</td>
-                    <td>Brazilian Jiu Jitsu</td>
+                    <td>Adult Brazilian Jiu Jitsu</td>
                     <td>Maxime Raymond</td>
                 </tr>
                 <!-- Add more rows for each class -->
