--- a/khk.html
+++ b/khk.html
@@ -49,6 +49,8 @@
                 <li><strong>Registration Fee:</strong> $20.00 (includes one prize draw entry)</li>
                 <li><strong>Eligibility for PS5 Prize Draw:</strong> Raise $200+ or complete Little Warriors Prevent It! workshop</li>
             </ul>
+            <p><strong>Sign up to start fundraising:</strong> <a href="https://www.canadahelps.org/en/charities/little-warriors/p2p/Kids_Helping_Kids_Super_Seminar_3_2025/page/sign-up" target="_blank" class="button">Create an Account</a></p>
+
         </section>
 
         <section id="about-hal" class="card">
