--- a/khk.html
+++ b/khk.html
@@ -16,9 +16,9 @@
 
     <main>
         <section id="about-event" class="card">
-          <img src="Photos/khk.png" alt="Super Seminar Image" class="seminar-image">
+            <img src="Photos/khk.png" alt="Super Seminar Image" class="seminar-image">
             <h2>About the Super Seminar</h2>
-            <p>Join us for the Kids Helping Kids Super Seminar 3.0, an event designed to raise funds for Little Warriors, a charity dedicated to preventing, raising awareness, and treating child sexual abuse. This year’s event promises exciting sessions and the opportunity to make a difference.</p>
+            <p>Restigouche Dojo is proud to host a special <strong>Judo & Brazilian Jiu-Jitsu seminar</strong> in support of the Kids Helping Kids Super Seminar fundraiser. While the official Super Seminar takes place in Alberta, we are contributing to the cause by raising funds, spreading awareness, and bringing our community together for an exciting martial arts event. Join us for a day of learning, training, and making a difference.</p>
             <ul>
                 <li>Participants of all ages will receive Jiu Jitsu training led by Black Belts.</li>
                 <li>Following the training, enjoy a 1-hour open mat rollathon with local athletes.</li>
@@ -50,7 +50,6 @@
                 <li><strong>Eligibility for PS5 Prize Draw:</strong> Raise $200+ or complete Little Warriors Prevent It! workshop</li>
             </ul>
             <p><strong>Sign up to start fundraising:</strong> <a href="https://www.canadahelps.org/en/charities/little-warriors/p2p/Kids_Helping_Kids_Super_Seminar_3_2025/page/sign-up" target="_blank" class="button">Create an Account</a></p>
-
         </section>
 
         <section id="about-hal" class="card">
