--- a/khk.html
+++ b/khk.html
@@ -20,7 +20,7 @@
             <h2>About the Super Seminar</h2>
             <p>Restigouche Dojo is proud to host a special <strong>Judo & Brazilian Jiu-Jitsu seminar</strong> in support of the Kids Helping Kids Super Seminar fundraiser. While the official Super Seminar takes place in Alberta, we are contributing to the cause by raising funds, spreading awareness, and bringing our community together for an exciting martial arts event. Join us for a day of learning, training, and making a difference.</p>
             <ul>
-                <li>Participants of all ages will receive Jiu Jitsu training led by Black Belts.</li>
+                <li>Participants of all ages will receive a Judo and Jiu Jitsu training.</li>
                 <li>Following the training, enjoy a 1-hour open mat rollathon with local athletes.</li>
                 <li>Entry fee: $20.00 (includes 1 prize draw entry).</li>
                 <li>Additional prize draw entries for each $20 raised.</li>
@@ -52,11 +52,7 @@
             <p><strong>Sign up to start fundraising:</strong> <a href="https://www.canadahelps.org/en/charities/little-warriors/p2p/Kids_Helping_Kids_Super_Seminar_3_2025/page/sign-up" target="_blank" class="button">Create an Account</a></p>
         </section>
 
-        <section id="about-hal" class="card">
-            <h2>Meet Hal MacDonald</h2>
-            <p>Hal MacDonald is a passionate advocate for Little Warriors, inspired by his sister’s story of resilience after surviving abuse. His dedication has fueled past fundraisers, including the <strong>60X60@60</strong> event, where Hal raised $75,000 by sparring with 60 athletes in a single session. Last year, he helped raise $54,000 through a similar BJJ seminar.</p>
-        </section>
-
+    
         <section id="little-warriors-programs" class="card">
             <h2>Additional Programs by Little Warriors</h2>
             <ul>
