--- a/judovalues.html
+++ b/judovalues.html
@@ -27,8 +27,8 @@
     </div>
 
     <div class="value">
-        <h2>4. Honor</h2>
-        <p><strong>Honor</strong> in judo is about living up to the principles of judo both on and off the mats. A judoka shows honor by following the rules, respecting opponents, and giving their best effort, regardless of the outcome. Honor is upheld in competition through fair play and gracious behavior, whether in victory or defeat. Outside of matches, honor involves maintaining a strong moral compass, adhering to the spirit of judo, and contributing to the growth and well-being of the judo community.</p>
+        <h2>4. Honour</h2>
+        <p><strong>Honour</strong> in judo is about living up to the principles of judo both on and off the mats. A judoka shows honour by following the rules, respecting opponents, and giving their best effort, regardless of the outcome. Honour is upheld in competition through fair play and gracious behavior, whether in victory or defeat. Outside of matches, honour involves maintaining a strong moral compass, adhering to the spirit of judo, and contributing to the growth and well-being of the judo community.</p>
     </div>
 
     <div class="value">
