--- a/khk.html
+++ b/khk.html
@@ -24,15 +24,14 @@
                 <li>Following the training, enjoy a 1-hour open mat rollathon with local athletes.</li>
                 <li>Entry fee: $20.00 (includes 1 prize draw entry).</li>
                 <li>Additional prize draw entries for each $20 raised.</li>
-                <li>Raise $200 or more to be eligible for a PS5.</li>
+            <--    <li>Raise $200 or more to be eligible for a PS5.</li>
             </ul>
-        </section>
+        </section> -->
 
         <section id="incentives" class="card">
             <h2>Special Participation Incentives</h2>
-            <p>For every $20 you raise, your name is entered into a prize draw for amazing prizes. Raise $200 or more, and you’ll be eligible to win a PS5!</p>
-            <p>If parents complete the Little Warriors <strong>Prevent It!</strong> workshop before April 2, 2024, their child receives two additional entries for the PS5 draw.</p>
-            <p>Submit certificates to <a href="mailto:Mariana.resende.elite@gmail.com">Mariana.resende.elite@gmail.com</a> to claim the extra draw entries.</p>
+            <p>For every $20 you raise, your name is entered into a prize draw for amazing prizes. <--Raise $200 or more, and you’ll be eligible to win a PS5! --></p>
+          
         </section>
 
         <section id="about-little-warriors" class="card">
