--- a/khk.html
+++ b/khk.html
@@ -24,13 +24,10 @@
                 <li>Following the training, enjoy a 1-hour open mat rollathon with local athletes.</li>
                 <li>Entry fee: $20.00 (includes 1 prize draw entry).</li>
                 <li>Additional prize draw entries for each $20 raised.</li>
-            <--    <li>Raise $200 or more to be eligible for a PS5.</li>
-            </ul>
-        </section> -->
 
         <section id="incentives" class="card">
             <h2>Special Participation Incentives</h2>
-            <p>For every $20 you raise, your name is entered into a prize draw for amazing prizes. <--Raise $200 or more, and you’ll be eligible to win a PS5! --></p>
+            <p>For every $20 you raise, your name is entered into a prize draw for amazing prizes.</p>
           
         </section>
 
@@ -46,7 +43,6 @@
                 <li><strong>Date:</strong> April 2024</li>
                 <li><strong>Location:</strong> Restigouche Dojo</li>
                 <li><strong>Registration Fee:</strong> $20.00 (includes one prize draw entry)</li>
-                <li><strong>Eligibility for PS5 Prize Draw:</strong> Raise $200+ or complete Little Warriors Prevent It! workshop</li>
             </ul>
             <p><strong>Sign up to start fundraising:</strong> <a href="https://www.canadahelps.org/en/charities/little-warriors/p2p/Kids_Helping_Kids_Super_Seminar_3_2025/page/sign-up" target="_blank" class="button">Create an Account</a></p>
         </section>
